painted texture get lost after first save #44543

Closed
opened 2015-04-29 09:31:25 +02:00 by mathieu menuet · 24 comments

System Information
Win7 x64

Blender Version
Broken: 2.74

Short description of error
When working on a new project for texture painting, the whole work done before the first save get lost.

Exact steps for others to reproduce the error
On a new file, open an image, choose it for texture paint, paint on it then save the blend. After the blend file has been saved, all the work has been lost.
It doesn't happen on files which were already saved, so I can't attach a demonstration file.

**System Information** Win7 x64 **Blender Version** Broken: 2.74 **Short description of error** When working on a new project for texture painting, the whole work done before the first save get lost. **Exact steps for others to reproduce the error** On a new file, open an image, choose it for texture paint, paint on it then save the blend. After the blend file has been saved, all the work has been lost. It doesn't happen on files which were already saved, so I can't attach a demonstration file.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bliblubli

Added subscriber: @bliblubli

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Antonis Ryakiotakis self-assigned this 2015-04-29 11:51:51 +02:00

This works as expected I'm afraid - it needs to change of course, but it's not really a bug.
Blender works differently than other software, you have to save your images explicitly one by one.
We have some ideas about how to make texture saving automatic and easy but for now you should always take care to save your textures manually.

This works as expected I'm afraid - it needs to change of course, but it's not really a bug. Blender works differently than other software, you have to save your images explicitly one by one. We have some ideas about how to make texture saving automatic and easy but for now you should always take care to save your textures manually.
Author

sorry for my bad english then, I didn't mean that the image is not saved with the file, I meant that saving the file erase the work done. Clicking on save (blend file) delete your painting instantly. It only happen on the first save, the following saves don't trigger the bug. I don't think it's wanted to delete artist work ?

sorry for my bad english then, I didn't mean that the image is not saved with the file, I meant that saving the file erase the work done. Clicking on save (blend file) delete your painting instantly. It only happen on the first save, the following saves don't trigger the bug. I don't think it's wanted to delete artist work ?

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Wow, confirmed! That's a serious issue indeed!

Wow, confirmed! That's a serious issue indeed!
Author

Could it be backported with some other fixes to 2.74? I give several courses this month in a university with 2.74 and it really doesn't look professional as a warning start for the course :D The students who discovered the bug are already a bit sad :/

Could it be backported with some other fixes to 2.74? I give several courses this month in a university with 2.74 and it really doesn't look professional as a warning start for the course :D The students who discovered the bug are already a bit sad :/
Author

this issues https:*developer.blender.org/T44154 and https:*developer.blender.org/T44361 would be nice in a 2.74a if I may. Sorry for expressing a simple user wish, I promise I'll not do it anymore, but students leaving a course are not funny for me and for you, even if you don't notice it.

this issues https:*developer.blender.org/T44154 and https:*developer.blender.org/T44361 would be nice in a 2.74a if I may. Sorry for expressing a simple user wish, I promise I'll not do it anymore, but students leaving a course are not funny for me and for you, even if you don't notice it.

Added subscriber: @sindra1961

Added subscriber: @sindra1961

It occurs equally in 2.49b.
The preservation form of the image is not appointed at the stage painted pictures.
If it is packed in PNG form, it does not disappear.

It occurs equally in 2.49b. The preservation form of the image is not appointed at the stage painted pictures. If it is packed in PNG form, it does not disappear.

I do not know what psy-fi identified, but your operation only gets a wrong it.
You should read "Getting Started" of "Texture Painting" in the official manual.
Texture Painting
When a new image is generated, a data block is generated.
It is it that you saved in blend file.
If you include the content that painted pictures in an image in blend file, you must pack it in blend file as an internal file.

I do not know what psy-fi identified, but your operation only gets a wrong it. You should read "Getting Started" of "Texture Painting" in the official manual. [Texture Painting ](http://wiki.blender.org/index.php/Doc:2.6/Manual/Textures/Painting) When a new image is generated, a data block is generated. It is it that you saved in blend file. If you include the content that painted pictures in an image in blend file, you must pack it in blend file as an internal file.
Author

Thank you for wanting to help Sindra, but you don't understand what I meant. I mean that blender erase your work at the moment. Not that it doesn't save it (that is the case but you only notice it by reopening the file or restarting Blender). So, while you are working on the file, just clicking on file -> save will instantly erase all your paintings.
I know that (paint -> save blend -> close file -> reopen it) will make you loose your painting because the bitmaps have to be saved separately or packed.
But the problem is (paint -> save blend file only, without quiting) destroy all your paintings while you are still working.
Hope it's now clear, anyway Psi-fy knows what he does and I'm also not a new user.

Thank you for wanting to help Sindra, but you don't understand what I meant. I mean that blender erase your work at the moment. Not that it doesn't save it (that is the case but you only notice it by reopening the file or restarting Blender). So, while you are working on the file, just clicking on file -> save will instantly erase all your paintings. I know that (paint -> save blend -> close file -> reopen it) will make you loose your painting because the bitmaps have to be saved separately or packed. But the problem is (paint -> save blend file only, without quiting) destroy all your paintings while you are still working. Hope it's now clear, anyway Psi-fy knows what he does and I'm also not a new user.

Even if I store only blend file and do not leave blender, the paint does not disappear.

Even if I store only blend file and do not leave blender, the paint does not disappear.

Oh, I see.
It means that it is necessary to open image file.

Oh, I see. It means that it is necessary to open image file.

The cause is this.
Probably it works definitely.
untitled.blend.png

Auto Update Other Affected Windows

The cause is this. Probably it works definitely. ![untitled.blend.png](https://archive.blender.org/developer/F168883/untitled.blend.png) [Auto Update Other Affected Windows ](http://wiki.blender.org/index.php/Doc:2.6/Manual/Textures/UV_Image_Editor)
Author

just tried to put it off, the bug triggers anyway. Be sure you open an image from hdd, not one you created in blender.

just tried to put it off, the bug triggers anyway. Be sure you open an image from hdd, not one you created in blender.

Added subscribers: @Psy-Fi, @mont29

Added subscribers: @Psy-Fi, @mont29

@Psy-Fi to me it’s same issue as undo one (you know, paint, move object in 3DView, undo, your painting is gone)?

@Psy-Fi to me it’s same issue as undo one (you know, paint, move object in 3DView, undo, your painting is gone)?

@bliblubli:
I got a wrong above-mentioned optional meaning.
I have nothing to do with this problem.

@mont29:
When 3dview is displayed with image editor, it does not occur.
When the operation is carried out at the time of non-indication, image editor occurs.

@bliblubli: I got a wrong above-mentioned optional meaning. I have nothing to do with this problem. @mont29: When 3dview is displayed with image editor, it does not occur. When the operation is carried out at the time of non-indication, image editor occurs.

This issue was referenced by 924f31e54f

This issue was referenced by 924f31e54f59e13007b75f9388ef4bd089f847b2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @gipen

Added subscriber: @gipen

Today I had this same problem! blender 2.78c

Today I had this same problem! blender 2.78c
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44543
No description provided.